--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,22 @@ plugins {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.13.0'
-    implementation (group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30')
-    implementation (group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
-    compileOnly (group: 'org.projectlombok', name: 'lombok', version: '1.18.6')
-    annotationProcessor (group: 'org.projectlombok', name: 'lombok', version: '1.18.6')
+	compileOnly("org.projectlombok:lombok:1.18.38")
+	annotationProcessor("org.projectlombok:lombok:1.18.38")	
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+	testCompileOnly("org.projectlombok:lombok:1.18.38")
+	testAnnotationProcessor("org.projectlombok:lombok:1.18.38")	
 }
 
 jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    // from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     manifest {
         attributes 'Main-Class': 'org.jcmv.photo.PhotoFixer'
     }
